tooling/nargo_cli/tests/snapshots/execution_success/encrypted_log_regression/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "eph_pk_bytes",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      },
      {
        "name": "incoming_header_ciphertext",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      },
      {
        "name": "incoming_body_ciphertext",
        "type": {
          "kind": "array",
          "length": 9,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      },
      {
        "name": "flag",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 15,
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 8
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _29",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10, _11, _12, _13, _14]",
    "public parameters indices : []",
    "return value indices : [_15, _16, _17, _18, _19, _20, _21, _22, _23, _24, _25, _26, _27, _28, _29]",
    "BLACKBOX::RANGE [(_0, 8)] []",
    "BLACKBOX::RANGE [(_1, 8)] []",
    "BLACKBOX::RANGE [(_2, 8)] []",
    "BLACKBOX::RANGE [(_3, 8)] []",
    "BLACKBOX::RANGE [(_4, 8)] []",
    "BLACKBOX::RANGE [(_5, 8)] []",
    "BLACKBOX::RANGE [(_6, 8)] []",
    "BLACKBOX::RANGE [(_7, 8)] []",
    "BLACKBOX::RANGE [(_8, 8)] []",
    "BLACKBOX::RANGE [(_9, 8)] []",
    "BLACKBOX::RANGE [(_10, 8)] []",
    "BLACKBOX::RANGE [(_11, 8)] []",
    "BLACKBOX::RANGE [(_12, 8)] []",
    "BLACKBOX::RANGE [(_13, 8)] []",
    "BLACKBOX::RANGE [(_14, 1)] []",
    "EXPR [ (-1, _0, _14) (1, _15) 0 ]",
    "EXPR [ (-1, _1, _14) (1, _16) 0 ]",
    "EXPR [ (-1, _2, _14) (1, _17) 0 ]",
    "EXPR [ (-1, _3, _14) (1, _18) 0 ]",
    "EXPR [ (-1, _4, _14) (1, _19) 0 ]",
    "EXPR [ (1, _20) 0 ]",
    "EXPR [ (-1, _5, _14) (1, _21) 0 ]",
    "EXPR [ (-1, _6, _14) (1, _22) 0 ]",
    "EXPR [ (-1, _7, _14) (1, _23) 0 ]",
    "EXPR [ (-1, _8, _14) (1, _24) 0 ]",
    "EXPR [ (-1, _9, _14) (1, _25) 0 ]",
    "EXPR [ (-1, _10, _14) (1, _26) 0 ]",
    "EXPR [ (-1, _11, _14) (1, _27) 0 ]",
    "EXPR [ (-1, _12, _14) (1, _28) 0 ]",
    "EXPR [ (-1, _13, _14) (1, _29) 0 ]"
  ],
  "debug_symbols": "nZHNCoQgFIXfxXUL+3HQeZVhCLNbCKJiGgzRu49FNjXQptX13M/zLXRCLTShr6XuzICerwk1Tiol+1oZwb00Om6nOUMp1t4BxBU68Niy3IH26KmDUhkauQrrpcFyvU7PXaQ4Q6DbOKOwkwqW05z92vi6mjPMtnaBq3IXkLMhvzYUlOwG+mA3DCVm1WYoc1zdMdCcJAMtyMnwjokL6f5ffuRO8kbBFrugxYH6j00k/Zx1RkAbHCymlUX3Fw==",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
